--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
   },
   "scripts": {
     "embed": "bun run scripts/embed-data.ts",
-    "build": "bun run embed && bun build src/index.ts --outdir dist --target node",
-    "build:binary": "bun run embed && bun build src/index.ts --compile --outfile aicgen",
-    "build:binary:windows": "bun run embed && bun build src/index.ts --compile --outfile aicgen.exe",
-    "build:binary:linux": "bun run embed && bun build src/index.ts --compile --outfile aicgen-linux --target=bun-linux-x64",
-    "build:binary:macos": "bun run embed && bun build src/index.ts --compile --outfile aicgen-macos --target=bun-darwin-arm64",
-    "build:all": "bun run embed && bun run build:binary:windows && bun run build:binary:linux && bun run build:binary:macos",
+    "prebuild": "bun run embed",
+    "build": "bun build src/index.ts --outdir dist --target node",
+    "build:binary": "bun run embed && bun run scripts/build-binary.ts current",
+    "build:binary:windows": "bun run embed && bun run scripts/build-binary.ts windows",
+    "build:binary:linux": "bun run embed && bun run scripts/build-binary.ts linux",
+    "build:binary:macos": "bun run embed && bun run scripts/build-binary.ts macos",
+    "build:all": "bun run build:binary:windows && bun run build:binary:linux && bun run build:binary:macos",
     "dev": "bun --watch src/index.ts",
     "start": "bun src/index.ts",
     "test": "bun test",
@@ -40,6 +41,7 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.30.1",
+    "@inquirer/checkbox": "^5.0.2",
     "@inquirer/prompts": "^6.0.1",
     "chalk": "^5.3.0",
     "commander": "^12.1.0",
@@ -47,6 +49,7 @@
     "gray-matter": "^4.0.3",
     "handlebars": "^4.7.8",
     "ora": "^8.1.1",
+    "winston": "^3.19.0",
     "yaml": "^2.6.1"
   },
   "devDependencies": {
