--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "chalk": "^5.3.0",
     "commander": "^12.1.0",
     "debug": "^4.3.7",
+    "decompress": "^4.2.1",
+    "decompress-targz": "^4.1.1",
     "gray-matter": "^4.0.3",
     "handlebars": "^4.7.8",
     "ora": "^8.1.1",
@@ -55,6 +57,7 @@
   "devDependencies": {
     "@types/bun": "^1.1.13",
     "@types/debug": "^4.1.12",
+    "@types/decompress": "^4.2.7",
     "@types/node": "^20.17.9",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
