--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/yourusername/aicgen.git"
+    "url": "https://github.com/lpsandaruwan/aicgen.git"
   },
   "bin": {
     "aicgen": "./dist/index.js"
@@ -40,7 +40,9 @@
     "format": "prettier --write src"
   },
   "dependencies": {
+    "@anthropic-ai/claude-agent-sdk": "^0.1.65",
     "@anthropic-ai/sdk": "^0.30.1",
+    "@google/generative-ai": "^0.24.1",
     "@inquirer/checkbox": "^5.0.2",
     "@inquirer/prompts": "^6.0.1",
     "chalk": "^5.3.0",
@@ -50,9 +52,11 @@
     "decompress-targz": "^4.1.1",
     "gray-matter": "^4.0.3",
     "handlebars": "^4.7.8",
+    "openai": "^6.10.0",
     "ora": "^8.1.1",
     "winston": "^3.19.0",
-    "yaml": "^2.6.1"
+    "yaml": "^2.6.1",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/bun": "^1.1.13",
