workflow errors patch

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -130,18 +130,15 @@ jobs:
         with:
           submodules: true
 
-      - uses: oven-sh/setup-bun@v1
-  
       - uses: actions/setup-node@v4
         with:
           node-version: '20.x'
-          registry-url: 'https://registry.npmjs.org'
 
       - name: Build and Publish
         run: |
           bun install
           bun run build
-          echo "//registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}" > .npmrc
+          npm config set //registry.npmjs.org/:_authToken "${NODE_AUTH_TOKEN}"
           npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
