--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "config",
     "assistant"
   ],
-  "author": "",
+  "author": "Lahiru Sandaruwan <lpsandaruwan@gmail.com>",
   "license": "MIT",
   "repository": {
     "type": "git",
