--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -130,6 +130,8 @@ jobs:
         with:
           submodules: true
 
+      - uses: oven-sh/setup-bun@v1
+  
       - uses: actions/setup-node@v4
         with:
           node-version: '20.x'
