--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -74,12 +74,26 @@ jobs:
           cp packaging/linux/control dist/deb/DEBIAN/control
           
           dpkg-deb --build dist/deb dist/aicgen_amd64.deb
+
+      - name: Create RPM Package
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y rpm
+          
+          mkdir -p ~/rpmbuild/{BUILD,RPMS,SOURCES,SPECS,SRPMS}
+          cp dist/aicgen-linux ~/rpmbuild/SOURCES/
+          cp packaging/linux/aicgen.spec ~/rpmbuild/SPECS/
+          
+          rpmbuild -ba ~/rpmbuild/SPECS/aicgen.spec
+          cp ~/rpmbuild/RPMS/x86_64/*.rpm dist/aicgen_x86_64.rpm
           
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
           name: linux-package
-          path: dist/aicgen_amd64.deb
+          path: |
+            dist/aicgen_amd64.deb
+            dist/aicgen_x86_64.rpm
 
   # ----------------------------------------------------------------
   # JOB: BUILD MACOS
@@ -160,6 +174,7 @@ jobs:
           files: |
             windows-installer/aicgen-setup-x64.exe
             linux-package/aicgen_amd64.deb
+            linux-package/aicgen_x86_64.rpm
             macos-installer/aicgen.pkg
           draft: false
           prerelease: false
